--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,17 +11,30 @@
 	 <hr>
 
 	<div ng-repeat="theme in themes">
-		Название
-		<input type="text" ng-model="theme.name">
-		Видимое в URL название( Лат. )
-		<input type="text" ng-model="theme.userlabel">
+		<a href="/{{ theme.userlabel }}">
+			<div type="text">
+				<span>{{ theme.name }}</span>
+				<span> \\\ </span>
+				<span>{{ theme.userlabel }}</span>
+			</div>
+		</a>
+		Туры
+		<div class="tours">
+			<div ng-repeat="tour in theme.tours">
+				<a href="/{{ theme.userlabel }}/{{ tour.userlabel }}">
+					<p>
+						<span>{{ tour.title }}</span>
+						<span> \\\ </span>
+						<span>{{ tour.userlabel }}</span>
+					</p>
+				</a>
+			</div>
+		</div>
+		<hr>
 	</div>
 
-	<hr>
-	Add
-	<hr>
+	<h4>Добавляем тему</h4>
 
-	Добавляем тему
 	Название
 	<input type="text" ng-model="newtheme.name">
 	Видимое в URL название( Лат. )
@@ -33,24 +46,64 @@
 	<hr>
 	<hr>
 
-	Добавляем подтему
+	<h4>Добавляем подтему</h4>
 
 	Выберите тему
-	<select ng-model="newsubtheme.theme" ng-options="t.name as t.name for t in themes"></select>
+	<select ng-model="newsubtheme.theme" ng-options="t.userlabel as t.name for t in themes"></select>
 	Название
 	<input type="text" ng-model="newsubtheme.name">
 	Видимое в URL название( Лат. )
 	<input type="text" ng-model="newsubtheme.userlabel">
 	<button ng-click="add('subtheme', newsubtheme)">Add subtheme</button>
 
+	<hr>
+	<hr>
+	<hr>
+	<hr>
+	<hr>
+
+	<h4>Добавить Тур</h4>
+
+	Название
+	<input type="text" ng-model="newtour.title">
+	User Label
+	<input type="text" ng-model="newtour.userlabel">
+	Выберите тему
+	<select ng-model="newtour.theme" ng-options="t.userlabel as t.name for t in themes"></select>
+	<hr>
+	<hr>
+	<textarea ui-tinymce ng-model="newtour.content"></textarea>
+	<button ng-click="add('tour', newtour)">Add Tour</button>
+
+	<hr>
+	<hr>
+	<hr>
+	<hr>
+	<hr>
+	<hr>
+	<hr>
+	<hr>
+
 
 </div>
 
 <style>
+	.subthemes, .tours {
+		border-left : 3px solid blue;
+		padding: 2px 10px;
+	}
+	.subthemes > div {
+		border : 1px solid rgba(0,0,0,.3);
+		margin-bottom: 5px;
+		padding: 2px;
+	}
+	.subthemes > div:hover {
+		background-color: rgba(0,0,0,.3);
+	}
 </style>
 
 <script>
 	window.themes = <%- JSON.stringify(themes) %>;
-	window.subthemes = <%- JSON.stringify(subthemes) %>;
+	window.tours = <%- JSON.stringify(tours) %>;
 
 </script>
