--- a/views/base.ejs
+++ b/views/base.ejs
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title><%- blocks.title %></title>
 	<script src="/libs/angular/angular.min.js"></script>
+	<script src="/libs/angular-sanitize/angular-sanitize.min.js"></script>
 	<!-- <script src="/libs/angular-route/angular-route.min.js"></script> -->
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
 	<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.css"></link>
