--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -37,6 +37,8 @@
 
 	Название
 	<input type="text" ng-model="newtheme.name">
+	Изображение URL
+	<input type="text" ng-model="newtheme.image">
 	Видимое в URL название( Лат. )
 	<input type="text" ng-model="newtheme.userlabel">
 	<button ng-click="add('theme', newtheme)">Add theme</button>
@@ -50,6 +52,8 @@
 
 	Название
 	<input type="text" ng-model="newtour.title">
+	Изображение
+	<input type="text" ng-model="newtour.image">
 	User Label
 	<input type="text" ng-model="newtour.userlabel">
 	Выберите тему
