--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,33 @@
-<link href='http://fonts.googleapis.com/css?family=Philosopher:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+<header>
+	<div class="logo">LOGO</div>
+	<div class="info">
+		<span>
+			<p>+7 909 6952723</p>
+			<p>molo4nik11@gmail.com</p>
+		</span>
+		</div>
+</header>
 
 
 <style>
+	header {
+		height: 100px;
+		line-height: 100px;
+	}
+	.logo {
+		float: left;
+		padding: 0px 10px;
+	}
+	.info {
+		float: right;
+	}
+	.info span {
+		line-height: 30px;
+		display: inline-block;
+		vertical-align: middle;
+		padding: 0px 10px;
+		text-align: right;
+		
+	}
 </style>
 
