--- a/views/base.ejs
+++ b/views/base.ejs
@@ -5,9 +5,12 @@
 	<title><%- blocks.title %></title>
 	<script src="/libs/angular/angular.min.js"></script>
 	<script src="/libs/angular-sanitize/angular-sanitize.min.js"></script>
-	<!-- <script src="/libs/angular-route/angular-route.min.js"></script> -->
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
+
+	<link href='http://fonts.googleapis.com/css?family=Philosopher:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.css"></link>
+
 </head>
 <body>
 	<div class="container">	
@@ -20,12 +23,13 @@
 	html, body {
 		height: 100%;
 		width: 100%;
-		background: #e2e2e2;
+		/*background: #e2e2e2;*/
 	}
 	.container {
 		width: 1200px !important;
-		background: #f5f5f5;
-		box-shadow: 0px 2px 2px rgba(0,0,0,.5);
+		padding: 0;
+		/*background: #f5f5f5;*/
+		/*box-shadow: 0px 2px 2px rgba(0,0,0,.5);*/
 	}
 	*[ng-click] {
 		cursor: pointer;
