--- a/views/theme.ejs
+++ b/views/theme.ejs
@@ -2,9 +2,27 @@
 <% block('title', 'Главная страница') -%>
 <script src="/javascripts/utils.js"></script>
 <script src="/javascripts/index_page.js"></script>
-<script src="/javascripts/directives/news_element.js"></script>
 <link rel="stylesheet" href="/stylesheets/index.css">
 <div ng-app="index" ng-controller="Index" ng-init="init()">	
 
-	<%= theme.name %>
+	<h4><%= theme.name %></h4>
+
+	<div ng-repeat="t in themes" class="each-theme" >
+		<a href="/<%= theme.userlabel %>/{{ t.userlabel }}">
+			<div class="bg" style="background-image: url({{ t.image }})">
+				<div class="fader">
+					<span>
+						<p>{{ t.title }}</p>
+					</span>
+				</div>
+			</div>
+		</a>
+	</div>
+
 </div>
+
+<script>
+	window.themes = <%- JSON.stringify(tours) %>;
+	window.theme = <%- JSON.stringify(theme) %>;
+</script>
+
