--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,18 +11,28 @@
 
 <style>
 	header {
-		height: 100px;
-		line-height: 100px;
+		height: 140px;
+		line-height: 140px;
+		position: relative;
 	}
 	.logo {
 		float: left;
+		position: absolute;
+		background-color: #1BAD58;
+		left : 50%;
+		line-height: 100px;
+		text-align: center;
+		top: 25px;
+		width: 100px;
+		height: 100px;
 		padding: 0px 10px;
+		margin-left: -50px;
 	}
 	.info {
 		float: right;
 	}
 	.info span {
-		line-height: 30px;
+		line-height: 25px;
 		display: inline-block;
 		vertical-align: middle;
 		padding: 0px 10px;
