Добавлена формировалка картинок

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,7 @@
 <header>
-	<div class="logo">LOGO</div>
+	<a href="/">
+		<div class="logo">LOGO</div>
+	</a>
 	<div class="info">
 		<span>
 			<p>+7 909 6952723</p>
