--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,9 +1,22 @@
+html, body {
+	padding: 0;
+	margin: 0;
+}
+*[class*=-list-items] {
+	width: 100%;
+	height: auto;
+	overflow: hidden;
+}
+
 .each-theme {
 	width: 50%;
 	float: left;
 	height: 200px;
 	line-height: 200px;
-	padding: 10px;
+	opacity: 0;
+	-webkit-transition: opacity 0.8s;
+	-moz-transition: opacity 0.8s;
+	transition: opacity 0.8s;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
