--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -5,6 +5,8 @@
 <script src="/javascripts/admin.js"></script>
 <script src="/javascripts/directives/news_element.js"></script>
 <link rel="stylesheet" href="/stylesheets/index.css">
+<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.css"></link>
+
 
 <div ng-app="admin" ng-controller="Admin">
 	 <h4>Добро пожаловать в админку</h4>
@@ -24,7 +26,7 @@
 			<div ng-repeat="tour in theme.tours">
 				<a href="/{{ theme.userlabel }}/{{ tour.userlabel }}">
 					<p>
-						<span>{{ tour.title }}</span>
+						<span>{{ tour.name }}</span>
 						<span> \\\ </span>
 						<span>{{ tour.userlabel }}</span>
 					</p>
@@ -54,7 +56,7 @@
 	<h4>Добавить Тур</h4>
 
 	Название
-	<input type="text" ng-model="newtour.title">
+	<input type="text" ng-model="newtour.name">
 	Изображение
 	<input type="text" ng-model="newtour.image">
 	User Label
