--- a/views/base.ejs
+++ b/views/base.ejs
@@ -9,7 +9,6 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Philosopher:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.css"></link>
 
 </head>
 <body>
@@ -26,7 +25,7 @@
 		/*background: #e2e2e2;*/
 	}
 	.container {
-		width: 1200px !important;
+		/*width: 1200px !important;*/
 		padding: 0;
 		/*background: #f5f5f5;*/
 		/*box-shadow: 0px 2px 2px rgba(0,0,0,.5);*/
