--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,6 +16,7 @@
 		height: 140px;
 		line-height: 140px;
 		position: relative;
+		/*background-color: #222;*/
 	}
 	.logo {
 		float: left;
@@ -24,7 +25,7 @@
 		left : 50%;
 		line-height: 100px;
 		text-align: center;
-		top: 25px;
+		top: 20px;
 		width: 100px;
 		height: 100px;
 		padding: 0px 10px;
