--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,6 @@
 <header>
 	<a href="/">
-		<div class="logo">LOGO</div>
+		<div class="logo"></div>
 	</a>
 	<div class="info">
 		<span>
@@ -21,15 +21,17 @@
 	.logo {
 		float: left;
 		position: absolute;
-		background-color: #1BAD58;
+		background-image: url('images/et_logo.jpg');
+		background-size: 100%;
+		background-position: center;
 		left : 50%;
 		line-height: 100px;
 		text-align: center;
 		top: 20px;
-		width: 100px;
+		width: 200px;
 		height: 100px;
 		padding: 0px 10px;
-		margin-left: -50px;
+		margin-left: -100px;
 	}
 	.info {
 		float: right;
