--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,40 +9,4 @@
 		</span>
 		</div>
 </header>
-
-
-<style>
-	header {
-		height: 140px;
-		line-height: 140px;
-		position: relative;
-		/*background-color: #222;*/
-	}
-	.logo {
-		float: left;
-		position: absolute;
-		background-image: url('images/et_logo.jpg');
-		background-size: 100%;
-		background-position: center;
-		left : 50%;
-		line-height: 100px;
-		text-align: center;
-		top: 20px;
-		width: 200px;
-		height: 100px;
-		padding: 0px 10px;
-		margin-left: -100px;
-	}
-	.info {
-		float: right;
-	}
-	.info span {
-		line-height: 25px;
-		display: inline-block;
-		vertical-align: middle;
-		padding: 0px 10px;
-		text-align: right;
-		
-	}
-</style>
-
+<link rel="stylesheet" href="/stylesheets/header.css">
