--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,8 +4,8 @@
 	</a>
 	<div class="info">
 		<span>
-			<p>+7 909 6952723</p>
-			<p>molo4nik11@gmail.com</p>
+			<p><b>+7 909 6952723</b></p>
+			<p><b>molo4nik11@gmail.com</b></p>
 		</span>
 		</div>
 </header>
