--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -31,14 +31,12 @@ html, body {
 	position: relative;
 	background-size: cover;
 	height: 100%;
+	overflow: hidden;
 	background-position: center center;
 	-webkit-transition: background-size 0.4s;
 	-moz-transition: background-size 0.4s;
 	transition: background-size 0.4s;
 }
-/*.each-theme:hover .bg {
-	background-size: 110%;
-}*/
 .fader {
 	text-align: center;
 	background-color: rgba(0,0,0,.5);
