--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,8 +4,8 @@
 	</a>
 	<div class="info">
 		<span>
-			<p><b>+7 909 6952723</b></p>
-			<p><b>molo4nik11@gmail.com</b></p>
+			<p><b>8 495 6264342</b></p>
+			<p><b>info@tour-eco.ru</b></p>
 		</span>
 		</div>
 </header>
