--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,6 +4,7 @@
 	</a>
 	<div class="info">
 		<span>
+			<p>Контакты</p>
 			<p><b>8 495 6264342</b></p>
 			<p><b>info@tour-eco.ru</b></p>
 		</span>
