--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -32,6 +32,7 @@ html, body {
 	background-size: cover;
 	height: 100%;
 	overflow: hidden;
+	border-radius: 2px;
 	background-position: center center;
 	-webkit-transition: background-size 0.4s;
 	-moz-transition: background-size 0.4s;
