--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -7,6 +7,7 @@
 	<div class="tour-bg" style="background-image : url(<%= tour.image %>)"></div>	
 	<div class="tour-content" ng-bind-html="trustAsHtml(tour.content)">
 	</div>
+	<p>Данное предложение не является публичной афертой.</p>
 </div>
 
 <script>
