--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,7 +6,7 @@
 		<span>
 			<p>Контакты</p>
 			<p><b>8 495 6264342</b></p>
-			<p><b>info@tour-eco.ru</b></p>
+			<p><b>6264342@gmail.com</b></p>
 		</span>
 		</div>
 </header>
