--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,10 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Ошибка</title>
+</head>
+<body>
+	Мы не имеем представления как вы попали на эту страницу!
+</body>
+</html>
